--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>styling</title>
     <link rel="stylesheet" href="/nav .css">
+    <script src="dom.js" defer></script>
 </head>
 <body>
     <section class="navbar">
@@ -13,8 +14,8 @@
         </div>
         <nav class="nav navlist">
             <ul>
-                <li><a href="#home" >Home</a></li>
-                <li><a href="#services" >Services</a></li>
+                <li><a href="#home" id="main" >Home</a></li>
+                <li><a href="#services" id="serv" >Services</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="/blog.html">Blog</a></li>
             </ul>
